--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 :root{
     --main-color: rgb(22, 22, 22);
     --menu-color: rgb(36, 36, 36);
+    --highlight-color: white;
 }
 
 body{
     background-color: var(--main-color);
+    font-family: sans-serif;
 }
 
 header{
@@ -13,6 +15,26 @@ header{
     top: 0;
     left:0;
     background-color: var(--menu-color);
-    height: 15vmin;
+    height: 12vmin;
     width: 100vw;
+}
+
+nav{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    /* justify-content: space-evenly; */
+}
+.nav-link{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 5vmin;
+    color: var(--highlight-color);
+}
+#current-tab{
+    background-color: var(--highlight-color);
+    color: var(--menu-color);
 }
