--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ footer{
     position: relative;
     background-color: var(--menu-color);
     padding-top: calc(var(--header-offset)/2);
+    margin-top: 5%;
     height: 30vh;
     width: 100%;
     left: 0;
@@ -172,4 +173,39 @@ footer{
 }
 footer hr{
     width: 95%;
+}
+
+#profile-container{
+    position: relative;
+    top: 5vh;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.avatar{
+    width: auto;
+    height: 15vh;
+    border-radius: 50%;
+    margin-left: 5vw;
+    margin-right: 2vw;
+    justify-self: flex-start;
+}
+#footer-copyright{
+    justify-self: flex-start;
+}
+.profile-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 5vmin;
+    color: var(--main-color);
+    background-color: var(--highlight-color);
+    margin-right: 2vw;
+    margin-left: 2vw;
+}
+@media screen and (max-width: 850px){
+    #footer-copyright{
+        display: none;
+    }
 }
