--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ h1{
     display: flex;
     border-style: solid;
     border-width: 1px;
+    width: 80%;
+    height: 80%;
     border-color: var(--highlight-color);
 }
 .grid-img{
