--- a/style.css
+++ b/style.css
@@ -206,9 +206,9 @@ footer hr{
 
 .avatar{
     width: auto;
-    height: 15vh;
+    height: 15vmin;
     border-radius: 50%;
-    margin-left: 5vw;
+    margin-left: 2vw;
     margin-right: 2vw;
     justify-self: flex-start;
 }
@@ -223,12 +223,15 @@ footer hr{
     font-size: 5vmin;
     color: var(--main-color);
     background-color: var(--highlight-color);
-    margin-right: 2vw;
-    margin-left: 2vw;
+    margin-right: 1vw;
+    margin-left: 1vw;
     border-radius: 0.1em;
 }
-@media screen and (max-width: 850px){
+#footer-copyright{
+    margin-left: 5%;
+}
+/* @media screen and (max-width: 850px){
     #footer-copyright{
         display: none;
     }
-}
+} */
