--- a/style.css
+++ b/style.css
@@ -179,18 +179,31 @@ h1{
     box-shadow: 5px 7px 7px rgba(14, 14, 14, 0.74);
 }
 
+@media screen and (max-width: 600px){
+    .form{
+        width: 80%;
+        
+    }
+}
+
 .form-element{
     font-size: 20px;
     margin-bottom: 5%;
 }
 
 input.form-element{
-    width: 80%
+    width: 80%;
+    min-width: 100px;
 }
 
 h2.form-element {
     text-align: center;
     font-size: 40px;
+    
+}
+select.form-element{
+    width: 80%;
+    max-width: 200px;
 }
 
 /*footer elements*/
